<resources>
    <string name="app_name">Musical</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="album_art">Album art</string>
    <string name="album_title_transition">album_title_transition</string>
    <string name="album_art_transition">album_cover_transition</string>
    <string name="album_artist_transition">album_artist_transition</string>
    <string name="artist_detail_image">Artist Placeholder</string>
    <string name="artist_title_transition">artist_title_transition</string>

    <string name="intent_extra_album_art">album_cover</string>
    <string name="intent_extra_album_name">album_title</string>
    <string name="intent_extra_album_artist">album_artist</string>

    <string name="widget_song_title">Title</string>
    <string name="widget_song_artist">Artist</string>

    <string name="playlist">PlayList</string>

    <string name="mp_state">media_player_state</string>
    <string name="media_path">Path</string>
    <string name="media_artist">Artist</string>
    <string name="media_title">Title</string>

    <string name="default_service_start">SERVICE_START</string>

    <string name="permission_error">Permission to read storage denied. Please restart the app and grant permission</string>

    <!--- Content Descriptions -->

    <string name="album_art_description">Album Art</string>
    <string name="play_pause_desc">Play/Pause</string>
    <string name="next_desc">Next</string>
    <string name="previous_desc">Previous</string>

    <!-- Widget -->
    <string name="default_artist">Kanye West</string>
    <string name="default_title">Gold Digger</string>

</resources>
