<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/widget_album_art"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/album_art_description"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/fallback_cover" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/widget_artist_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/default_artist"
            android:textColor="#969698"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/widget_track_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/default_title"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/widget_rewind_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/previous_desc"
                android:padding="16dp"
                android:src="@drawable/rewind" />

            <ImageView
                android:id="@+id/widget_play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/play_pause_desc"
                android:padding="16dp"
                android:src="@drawable/play" />

            <ImageView
                android:id="@+id/widget_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/next_desc"
                android:padding="16dp"
                android:src="@drawable/forward" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>